 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2013-08-13

- r1010 remove TPControl class [ver 1.3.2]
  - TPControlクラスを追加したTextParser-1.4.0に対応 >> TPControl.h/Cは削除

--------------------------
2013-08-12

- r1009 change parameter structure [ver 1.3.1]
  - /BCTable/OuterBoundary/FaceBC/Xminus/MediumOnGuideCell  >>  /BCTable/OuterBoundary/BasicBCs[@]/MediumOnGuideCell
  - /Steer/GeometryModel/HintOfFillingFluid  >>  /DomainInfo/HintOfFillingFluid
  - /Iterationのパラメータセットを変更
  - /Steer, /Parameterをとる．パラメータをトップの直下に変更．
  - /Steer/SolverProperty >> /GoverningEquation
  - IterationCtl + ConvergenceCriterion >> IterationCtl class, IterationControl.h
  - ラベル配列はlist[@]とIteration
  - 外部境界面の判断を BoundaryOuter::dataCopy()において，BCclassへの境界条件番号に変更 OFF(0)のとき内部面

--------------------------
2013-08-02

- r1008 Change implementation of outer boundary routine
  - TractionFreeの再実装
  - 外部境界処理サブルーチンに隣接ランク番号を渡し，サブルーチン内で実行選択を行う．
  　外部境界条件処理手続きで同期が必要な場合，全てのランクが参加する必要があるための対応

--------------------------
2013-08-01

- r1007 bug fix of dynamic allocation
  - プロセス並列時にhistory_compo.txtのVspecモニタ値がゼロになるバグを修正（existLocal()の副作用）
  - コンポーネントがサブドメインに存在しない場合には，bboxの値をゼロにする >> DomainInfo.txtで確認
  - 並列時のsetGlobalCmpIdx()のインデクス計算を修正（表示用）
  - 動的配列への変更

--------------------------
2013-07-28

- r1006 Introduce ffv_Version.h
  - バージョン番号の自動生成
  - 分割時の丸め誤差に起因するエラーの対応 >> 自動分割処理
  - Intrinsic example : stokes2nd
  - 内部フィルを実行する場合の固体IDを計算する関数
    int VoxInfo::getFillSolidID(const int* mid)
  - ノルムのゼロ割対応
  - count_comm_size()内のallreduceが性能上の問題となっていた（何かの作業でのミス）ものを除去
  - BCのsetEnsLocal()の処理 >> Heat関連は未処理

--------------------------
2013-07-27

- r1005 polygon problem
  - FXgenからのパラメータの流れを整理