@@ -19,6 +19,12 @@ REVISION HISTORY
 ================
 
 --------------------------
+2013-08-14
+
+- r1011 modify behavior of restart
+  - リスタート時の挙動を修正
+  
+--------------------------
 2013-08-13
 
 - r1010 remove TPControl class [ver 1.3.2]
